# neural-profiler

./: DATALOADER_README.md  README.md  audio_visualization.ipynb  config.example.yaml  config.modal.default.yaml  config.py  dataloader.py  example_usage.py  main.py  modal_app.py  modal_oidc_test.py  modal_test.py  pyproject.toml  test_dataloader_exact.py  test_dataloader_file.py  test_modal_dataloader.py  test_modal_file.py  test_soundfile.py  train.py  train_minimal_modal.py
logs/wandb/: latest-run
logs/wandb/offline-run-20260122_163055-y5xgy3cq/files/: requirements.txt
