[project]
name = "neural-profiler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "h5py>=3.8.0",
    "scipy>=1.11.0",
    "pyyaml>=6.0.0",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "ipywidgets>=8.1.8",
    "jupyterlab-widgets>=3.0.16",
    "pytorch-lightning>=2.6.0",
    "modal>=1.3.0.post1",
    "pydantic>=2.12.5",
    "boto3>=1.42.32",
    "jwt>=1.4.0",
    "wandb>=0.24.0",
]


[project.optional-dependencies]
# For local CPU development
cpu = [
    "torch>=2.8.0",
    "torchvision>=0.20.0",
]

# For cloud GPU training (CUDA 12.8)
gpu = [
    "torch>=2.8.0",
    "torchvision>=0.20.0",
]

dev = [
    "pytest>=7.4.0",
    "ruff>=0.1.0",
    "ipython>=8.12.0",
]

# Configure which PyTorch index to use for each extra
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "gpu" },
]

# Define the PyTorch indexes
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

# Prevent accidentally installing both CPU and GPU versions
[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "gpu" },
    ],
]

# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"

# [build-system]
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"